--- a/index.html
+++ b/index.html
@@ -4,14 +4,110 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel Site | Home Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Components Header -->
+    <header class="header">
+        <div class="header__logo-wrapper">
+            <img class="header_logo" src="" alt=""><h2>Travel Site</h2>
+        </div>
+        <nav class="header__nav">
+            <ul>
+                <li><a href="index.html" class="header__links">Home</a></li>
+                <li><a href="./pages/hawaii.html" class="header__links">Hawaii</a></li>
+                <li><a href="./pages/iceland.html" class="header__links">Iceland</a></li>
+                <li><a href="./pages/greece.html" class="header__links">Greece</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+  
+    <main class="main">
     <!-- Section Hero -->
+    <section class="section--hero">
+        <div class="section--hero__content-wrapper">
+            <h1>Travelling Comes With Endless Discoveries</h1>
+            <p>Don't let your dream be just dreams. Experience the world by booking a vacation with us now.</p>
+            <a href="" class="primary-cta">Get started</a>
+        </div>
+        <figure class="section--hero__figure">
+            <img src="./assets/images/hero.png" alt="travel together, plane & earth" class="section--hero__img">
+        </figure>
+    </section>
+
     <!-- Section Recommendations -->
+    <section class="section--recommendations">
+        <h2>Recommendations</h2>
+        <div class="section--recommendations-wrapper">
+            <a href="./pages/hawaii.html" class="section--recommendation-link">
+                <article class="section--recommendations__article">
+                    <figure class="section--recommendations__figure">
+                        <img class="section--recommendations__img" src="./assets/images/hawaii.jpg" alt="hawaii recommendation">
+                    </figure>
+                    <h4>Hawaii</h4>
+                </article>
+            </a>
+            <a href="./pages/iceland.html" class="section--recommendation-link">
+                <article class="section--recommendations__article">
+                    <figure class="section--recommendations__figure">
+                        <img class="section--recommendations__img" src="./assets/images/iceland.jpg" alt="iceland recommendation">
+                    </figure>
+                    <h4>Iceland</h4>
+                </article>
+            </a>
+            <a href="./pages/greece.html" class="section--recommendation-link">
+                <article class="section--recommendations__article">
+                    <figure class="section--recommendations__figure">
+                        <img class="section--recommendations__img" src="./assets/images/greece.jpg" alt="greece recommendation">
+                    </figure>
+                    <h4>Greece</h4>
+                </article>
+            </a>
+        </div>
+    </section>
+    </main>
+
     <!-- Components Footer -->
+    <footer class="footer">
+        <div class="footer__nav-wrapper">
+            <nav>
+                <h3>Contact</h3>
+                <div class="footer__contact-wrapper">
+                    <p class="footer__contact-label">Email</p>
+                    <p class="footer__contact-info">info@travelsite.com</p>
+                </div>
+            </nav>
+            <nav>
+                <h3>Hours</h3>
+                <div class="footer__hours-wrapper">
+                    <div class="footer__contact-wrapper">
+                        <p class="footer__contact-label">Monday - Friday</p>
+                        <p class="footer__contact-info">9:00 AM - 5:00 PM</p>
+                    </div>
+                    <div class="footer__contact-wrapper">
+                        <p class="footer__contact-label">Saturday</p>
+                        <p class="footer__contact-info">10:00 AM - 4:00 PM</p>
+                    </div>
+                    <div class="footer__contact-wrapper">
+                        <p class="footer__contact-label">Sunday</p>
+                        <p class="footer__contact-info">Closed</p>
+                    </div>
+                </div>
+            </nav>
+            <nav>
+                <h3>Social</h3>
+                <nav>
+                    <ul>
+                        <li><a href="www.instagram.com"><img src="./assets/icons/icon-instagram.png" alt="instagram"></a></li>
+                        <li><a href="www.facebook.com"><img src="./assets/icons/icon-facebook.png" alt="facebook"></a></li>
+                        <li><a href="www.twitter.com"><img src="./assets/icons/icon-twitter.png" alt="twitter"></a></li>
+                    </ul>
+                </nav>
+            </nav>
+        </div>
+    </footer>
 
 </body>
 </html>
