--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Site | Home Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <!-- Components Header -->
@@ -41,7 +41,7 @@
     <section class="section--recommendations">
         <h2>Recommendations</h2>
         <div class="section--recommendations-wrapper">
-            <a href="./pages/hawaii.html" class="section--recommendation-link">
+            <a href="./pages/hawaii.html" class="section--recommendations__link">
                 <article class="section--recommendations__article">
                     <figure class="section--recommendations__figure">
                         <img class="section--recommendations__img" src="./assets/images/hawaii.jpg" alt="hawaii recommendation">
@@ -49,7 +49,7 @@
                     <h4>Hawaii</h4>
                 </article>
             </a>
-            <a href="./pages/iceland.html" class="section--recommendation-link">
+            <a href="./pages/iceland.html" class="section--recommendations__link">
                 <article class="section--recommendations__article">
                     <figure class="section--recommendations__figure">
                         <img class="section--recommendations__img" src="./assets/images/iceland.jpg" alt="iceland recommendation">
@@ -57,7 +57,7 @@
                     <h4>Iceland</h4>
                 </article>
             </a>
-            <a href="./pages/greece.html" class="section--recommendation-link">
+            <a href="./pages/greece.html" class="section--recommendations__link">
                 <article class="section--recommendations__article">
                     <figure class="section--recommendations__figure">
                         <img class="section--recommendations__img" src="./assets/images/greece.jpg" alt="greece recommendation">
@@ -72,16 +72,16 @@
     <!-- Components Footer -->
     <footer class="footer">
         <div class="footer__nav-wrapper">
-            <nav>
+            <nav class="footer__contact-wrapper">
                 <h3>Contact</h3>
                 <div class="footer__contact-wrapper">
                     <p class="footer__contact-label">Email</p>
                     <p class="footer__contact-info">info@travelsite.com</p>
                 </div>
             </nav>
-            <nav>
+            <nav class="footer__hours-wrapper">
                 <h3>Hours</h3>
-                <div class="footer__hours-wrapper">
+                <div class="footer__hours-wrapper__flex">
                     <div class="footer__contact-wrapper">
                         <p class="footer__contact-label">Monday - Friday</p>
                         <p class="footer__contact-info">9:00 AM - 5:00 PM</p>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
             </nav>
-            <nav>
+            <nav class="footer__social-wrapper">
                 <h3>Social</h3>
                 <nav>
                     <ul>
