final touches, animations, js for active page, itinerary pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Components Header -->
     <header class="header">
         <div class="header__logo-wrapper">
-            <img class="header_logo" src="" alt=""><h2>Travel Site</h2>
+            <a href="index.html"><h2>Travel Site</h2></a>
         </div>
         <nav class="header__nav">
             <ul>
@@ -76,7 +76,7 @@
                 <h3>Contact</h3>
                 <div class="footer__contact-wrapper">
                     <p class="footer__contact-label">Email</p>
-                    <p class="footer__contact-info">info@travelsite.com</p>
+                    <p class="footer__contact-info"><a href="mailto:info@travelsite.com">info@travelsite.com</a></p>
                 </div>
             </nav>
             <nav class="footer__hours-wrapper">
@@ -109,5 +109,6 @@
         </div>
     </footer>
 
+        <script src="./scripts/scripts.js"></script>
 </body>
 </html>
